--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "check-more-types": "2.12.0",
     "lazy-ass": "1.4.0",
+    "lodash": "4.6.1",
     "yeoman-generator": "0.22.5"
   }
 }
