--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "My personal Yeoman generator for Node projects",
   "main": "app/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "commit": "commit-wizard",
+    "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";"
   },
   "files": [
     "app"
@@ -30,5 +32,17 @@
     "lazy-ass": "1.4.0",
     "lodash": "4.6.1",
     "yeoman-generator": "0.22.5"
+  },
+  "config": {
+    "pre-git": {
+      "commit-msg": "simple",
+      "pre-commit": [],
+      "pre-push": [],
+      "post-commit": ["npm run size"],
+      "post-merge": []
+    }
+  },
+  "devDependencies": {
+    "pre-git": "3.5.4"
   }
 }
