chore(git): moved npm size to pre-push hook

--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "pre-git": {
       "commit-msg": "simple",
       "pre-commit": [],
-      "pre-push": [],
-      "post-commit": ["npm run size"],
+      "pre-push": ["npm run size"],
+      "post-commit": [],
       "post-merge": []
     }
   },
