--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/bahmutov/generator-node-bahmutov#readme",
   "dependencies": {
     "check-more-types": "2.12.0",
+    "debug": "2.2.0",
     "lazy-ass": "1.4.0",
     "lodash": "4.6.1",
     "yeoman-generator": "0.22.5"
@@ -37,7 +38,9 @@
     "pre-git": {
       "commit-msg": "simple",
       "pre-commit": [],
-      "pre-push": ["npm run size"],
+      "pre-push": [
+        "npm run size"
+      ],
       "post-commit": [],
       "post-merge": []
     }
