--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "commit-wizard",
-    "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";"
+    "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";",
+    "issues": "git-issues"
   },
   "files": [
     "app"
@@ -30,6 +31,7 @@
   "dependencies": {
     "check-more-types": "2.12.0",
     "debug": "2.2.0",
+    "git-remote-origin-url": "2.0.0",
     "lazy-ass": "1.4.0",
     "lodash": "4.6.1",
     "yeoman-generator": "0.22.5"
@@ -46,6 +48,7 @@
     }
   },
   "devDependencies": {
+    "git-issues": "1.2.0",
     "pre-git": "3.6.0"
   }
 }
