--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
   "dependencies": {
     "check-more-types": "2.12.0",
     "debug": "2.2.0",
+    "fixpack": "2.3.0",
     "git-remote-origin-url": "2.0.0",
     "lazy-ass": "1.4.0",
     "lodash": "4.6.1",
+    "sort-object-keys": "1.1.2",
     "yeoman-generator": "0.22.5"
   },
   "config": {
