--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "generator-node-bahmutov",
   "description": "My personal Yeoman generator for Node projects",
   "main": "app/index.js",
+  "version": "0.0.0-semantic-release",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "commit-wizard",
