--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "app/index.js",
   "version": "0.0.0-semantic-release",
   "scripts": {
-    "test": "echo No unit tests",
+    "test": "npm run unit",
     "commit": "commit-wizard",
     "pretest": "npm run format && npm run lint",
+    "unit": "mocha app/*-spec.js",
     "lint": "standard --verbose app/index.js",
     "format": "standard-format -w app/index.js",
     "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";",
@@ -14,7 +15,8 @@
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "files": [
-    "app"
+    "app/*",
+    "!app/*-spec.js"
   ],
   "preferGlobal": true,
   "repository": {
@@ -57,10 +59,13 @@
     }
   },
   "devDependencies": {
+    "check-more-types": "2.12.0",
     "git-issues": "1.2.0",
+    "lazy-ass": "1.4.0",
+    "mocha": "2.4.5",
     "pre-git": "3.6.0",
+    "semantic-release": "^4.3.5",
     "standard": "6.0.8",
-    "standard-format": "2.1.1",
-    "semantic-release": "^4.3.5"
+    "standard-format": "2.1.1"
   }
 }
