chore(test): end 2 end testing on CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ node_js:
   - '4'
 before_install:
   - npm i -g npm@^2.0.0
+  - npm i -g yo@1.7.0
+  - git config --global user.email "test@test.com"
+  - git config --global user.name "Test Tester"
 before_script:
   - npm prune
 script:
