--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "homepage": "https://github.com/bahmutov/generator-node-bahmutov#readme",
   "dependencies": {
-    "check-more-types": "2.12.0",
+    "check-more-types": "2.12.1",
     "debug": "2.2.0",
     "fixpack": "2.3.0",
     "git-remote-origin-url": "2.0.0",
@@ -63,8 +63,8 @@
   "devDependencies": {
     "git-issues": "1.2.0",
     "mocha": "2.4.5",
-    "pre-git": "3.6.0",
-    "semantic-release": "^4.3.5",
+    "pre-git": "3.7.1",
+    "semantic-release": "6.2.1",
     "standard": "6.0.8",
     "standard-format": "2.1.1"
   }
