--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "homepage": "https://github.com/bahmutov/generator-node-bahmutov#readme",
   "dependencies": {
+    "@bahmutov/parse-github-repo-url": "0.1.1",
     "check-more-types": "2.12.1",
     "debug": "2.2.0",
     "fixpack": "2.3.0",
