--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
   },
   "homepage": "https://github.com/bahmutov/generator-node-bahmutov#readme",
   "dependencies": {
-    "@bahmutov/parse-github-repo-url": "0.1.1",
     "check-more-types": "2.12.1",
     "debug": "2.2.0",
     "fixpack": "2.3.0",
     "git-remote-origin-url": "2.0.0",
     "lazy-ass": "1.4.0",
     "lodash": "4.6.1",
+    "parse-github-repo-url": "1.3.0",
     "sort-object-keys": "1.1.2",
     "yeoman-generator": "0.22.5"
   },
