--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "test": "npm run unit",
     "commit": "commit-wizard",
-    "pretest": "npm run format && npm run lint",
+    "pretest": "npm run lint",
     "unit": "mocha app/*-spec.js",
-    "lint": "standard --verbose app/index.js",
-    "format": "standard-format -w app/index.js",
+    "lint": "standard --verbose --fix app/index.js",
     "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";",
     "issues": "git-issues",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
@@ -40,12 +39,12 @@
   },
   "homepage": "https://github.com/bahmutov/generator-node-bahmutov#readme",
   "dependencies": {
-    "check-more-types": "2.12.1",
+    "check-more-types": "2.23.0",
     "debug": "2.2.0",
-    "fixpack": "2.3.0",
+    "fixpack": "2.3.1",
     "git-remote-origin-url": "2.0.0",
-    "lazy-ass": "1.4.0",
-    "lodash": "4.6.1",
+    "lazy-ass": "1.5.0",
+    "lodash": "4.16.3",
     "parse-github-repo-url": "1.3.0",
     "sort-object-keys": "1.1.2",
     "yeoman-generator": "0.22.5"
@@ -69,14 +68,14 @@
     }
   },
   "devDependencies": {
-    "ban-sensitive-files": "1.8.2",
-    "deps-ok": "1.1.0",
-    "git-issues": "1.2.0",
-    "license-checker": "5.1.0",
-    "mocha": "2.4.5",
-    "pre-git": "3.7.1",
-    "semantic-release": "6.2.1",
-    "standard": "6.0.8",
-    "standard-format": "2.1.1"
+    "ban-sensitive-files": "1.8.3",
+    "deps-ok": "1.2.0",
+    "git-issues": "1.3.1",
+    "license-checker": "8.0.0",
+    "mocha": "3.1.0",
+    "pre-git": "3.10.0",
+    "semantic-release": "6.3.1",
+    "standard": "8.3.0",
+    "standard-format": "2.2.3"
   }
 }
