--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "e2e": "./test/e2e.sh",
     "ban": "ban",
     "license": "license-checker --production --onlyunknown --csv",
-    "deps": "deps-ok"
+    "deps": "deps-ok && dependency-check ."
   },
   "files": [
     "app/*",
@@ -69,6 +69,7 @@
   },
   "devDependencies": {
     "ban-sensitive-files": "1.8.3",
+    "dependency-check": "2.6.0",
     "deps-ok": "1.2.0",
     "git-issues": "1.3.1",
     "license-checker": "8.0.0",
