--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "homepage": "https://github.com/bahmutov/generator-node-bahmutov#readme",
   "dependencies": {
     "check-more-types": "2.23.0",
-    "debug": "2.2.0",
+    "debug": "2.6.0",
     "fixpack": "2.3.1",
     "git-remote-origin-url": "2.0.0",
     "lazy-ass": "1.5.0",
@@ -68,15 +68,14 @@
     }
   },
   "devDependencies": {
-    "ban-sensitive-files": "1.8.3",
-    "dependency-check": "2.6.0",
+    "ban-sensitive-files": "1.8.4",
+    "dependency-check": "2.7.0",
     "deps-ok": "1.2.0",
     "git-issues": "1.3.1",
-    "license-checker": "8.0.0",
-    "mocha": "3.1.0",
-    "pre-git": "3.10.0",
-    "semantic-release": "6.3.1",
-    "standard": "8.3.0",
-    "standard-format": "2.2.3"
+    "license-checker": "8.0.3",
+    "mocha": "3.2.0",
+    "pre-git": "3.12.0",
+    "semantic-release": "6.3.5",
+    "standard": "8.6.0"
   }
 }
