--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,11 @@ cache:
   directories:
     - node_modules
 notifications:
-  email: false
+  email: true
 node_js:
-  - '4'
+  - '6'
 before_install:
-  - npm i -g npm@^2.0.0
-  - npm i -g yo@1.7.0
+  - npm i -g yo
   - git config --global user.email "test@test.com"
   - git config --global user.name "Test Tester"
 before_script:
