feat(release): add yo node-bahmutov:release command, close #38

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "commit": "commit-wizard",
     "pretest": "npm run lint",
     "unit": "mocha app/*-spec.js",
-    "lint": "standard --verbose --fix app/*.js docker/*.js test/*.js",
+    "lint": "standard --verbose --fix app/*.js docker/*.js release/*.js test/*.js",
     "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";",
     "issues": "git-issues",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
