--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "issues": "git-issues",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "e2e": "./test/e2e.sh",
+    "e2e-typescript": "./test/e2e-typescript.sh",
     "ban": "ban",
     "license": "license-checker --production --onlyunknown --csv",
     "deps": "deps-ok && dependency-check ."
