--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_script:
 script:
   - npm test
   - npm run e2e
+  - npm run e2e-typescript
 after_success:
   - npm run semantic-release
 branches:
