--- a/package.json
+++ b/package.json
@@ -75,10 +75,14 @@
     "dependency-check": "2.7.0",
     "deps-ok": "1.2.0",
     "git-issues": "1.3.1",
+    "github-post-release": "1.7.1",
     "license-checker": "8.0.3",
     "mocha": "3.2.0",
     "pre-git": "3.12.0",
     "semantic-release": "6.3.6",
     "standard": "8.6.0"
+  },
+  "release": {
+    "generateNotes": "github-post-release"
   }
 }
