--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
 before_script:
   - npm prune
 script:
+  - ./next-update-travis.sh
   - npm test
   - npm run e2e
   - npm run e2e-typescript
