--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "debug": "2.6.0",
     "fixpack": "2.3.1",
     "git-remote-origin-url": "2.0.0",
+    "got": "7.1.0",
     "lazy-ass": "1.5.0",
     "lodash": "4.16.3",
     "parse-github-repo-url": "1.3.0",
@@ -84,6 +85,7 @@
     "pre-git": "3.12.0",
     "prettier-standard": "6.0.0",
     "semantic-release": "^6.3.6",
+    "snap-shot": "2.17.0",
     "standard": "10.0.2"
   },
   "release": {
