--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "pre-git": "3.12.0",
     "prettier-standard": "6.0.0",
     "semantic-release": "^6.3.6",
+    "sinon": "2.3.8",
     "snap-shot": "2.17.0",
     "standard": "10.0.2"
   },
