--- a/package.json
+++ b/package.json
@@ -79,14 +79,14 @@
     "deps-ok": "1.2.1",
     "git-issues": "1.3.1",
     "github-post-release": "1.13.1",
-    "license-checker": "13.1.0",
-    "mocha": "3.5.3",
+    "license-checker": "15.0.0",
+    "mocha": "4.0.1",
     "next-update-travis": "1.7.1",
     "nock": "9.0.25",
     "pre-git": "3.15.3",
-    "prettier-standard": "6.0.0",
-    "semantic-release": "^6.3.6",
-    "sinon": "3.3.0",
+    "prettier-standard": "7.0.3",
+    "semantic-release": "8.2.3",
+    "sinon": "4.0.2",
     "snap-shot": "2.17.0",
     "standard": "10.0.3"
   },
