fix: check for unused dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ before_script:
   - npm prune
 script:
   - ./next-update-travis.sh
+  - npm run deps
+  - npm run unused-deps
   - DEBUG=gen npm test
   - npm run e2e
   - npm run e2e-typescript
