fix: add rangeStrategy=pin to renovate config

--- a/app/templates/renovate.json
+++ b/app/templates/renovate.json
@@ -4,5 +4,6 @@
   "major": {
     "automerge": false
   },
-  "lockFileMaintenance": true
+  "lockFileMaintenance": true,
+  "rangeStrategy": "pin"
 }
